--- a/src/Styles/GlobalStyles.css
+++ b/src/Styles/GlobalStyles.css
@@ -12,7 +12,7 @@
 
 .container-form {
     width: 40%;
-    height: 70%;
+    height: 80%;
     /* box-shadow: rgba(71, 71, 71, 0.24) 0px 3px 8px; */
     border-radius: 3vw;
     display: flex;
@@ -24,7 +24,7 @@
 
 .container-form h1 {
     width: 90%;
-    font-size: 2vw;
+    font-size: 2.4vw;
     color: #F2F2F2;
 }
 
@@ -90,11 +90,11 @@
     align-self: flex-start;
 }
 
-ul {
+.lista-enderecos {
     width: 100%;
-    height: 70%;
+    max-height: 65%;
     overflow-y: auto;
-    padding: 0.2vw;
+    padding-right: 0.2vw;
     display: flex;
     flex-direction: column;
     gap: 0.8vw;
@@ -107,8 +107,24 @@ ul {
 .icone-endereco {
   list-style-type: none;
   width: 100%;
-  min-height: 6vh;
+  min-height: 8vh;
   border-radius: 0.5vw;
+  border: 1px solid #3B82F6;
+  color: #F2F2F2;
+
+  display:  flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.icon-planet {
+    width: 2.5vw;
+}
+
+.icon-edit-address {
+    width: 2vw;
+    cursor: pointer;
+    color: #F2F2F2;
 }
 
 .lista-enderecos::-webkit-scrollbar {
@@ -127,4 +143,59 @@ ul {
     background: #747474;
     /* borda arredondada */
     border-radius: 6.25rem;
+}
+
+.container-modal {
+    width: 95%;
+    height: 80%;
+    background-color: #1B1F23;
+    justify-self: flex-end;
+}
+
+.label-planet {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vw;
+    padding: 1vw;
+}
+
+select {
+    font-size: 0.8vw;
+    border: none;
+    outline: none;
+    height: 5vh;
+    border-radius: 0.5vw;
+    border: 1px solid #F2F2F2;
+    color: #F2F2F2;
+    background-color: transparent;
+}
+
+option {
+    color: #1B1F23;
+    border-radius: 0.5vw;
+}
+
+.in-new-addres {
+    font-size: 0.8vw;
+    border: none;
+    outline: none;
+    height: 5vh;
+    border-radius: 0.5vw;
+    border: 1px solid #F2F2F2;
+    color: #F2F2F2;
+    background-color: transparent;
+    padding: 0.2vw;
+}
+
+.flex {
+    display: flex;
+}
+
+.endereco-terra {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.endereco-terra label {
+    flex: 1;
 }
